<resources>
    <string name="app_name">Future Library System</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string-array name="languages">
        <item>العربية</item>
        <item>English</item>
    </string-array>
    <string name="nav_start">Start</string>
    <string name="nav_holdings">Advanced Search</string>
    <string name="nav_internet_search">Internet Search</string>
    <string name="nav_databases">Databases</string>
    <string name="nav_theses">Theses</string>
    <string name="nav_draft_theses">Draft Theses</string>
    <string name="nav_papers">Papers</string>
    <string name="nav_local_journals">Local Journals</string>
    <string name="nav_e_publish">E-Publish</string>
    <string name="nav_digital_contents">Digital Contents</string>
    <string name="nav_my_account">My Account</string>
    <string name="no_internet">No Internet Connection!</string>
    <string name="error_fetching_site_news">Error Fetching Site News!</string>
    <string name="error_fetching_results">Error Fetching Search Results!</string>
    <string name="error_fetching_subject">Error Fetching Subject Holdings!</string>
    <string name="bib_id_error">Wrong format!\nEx: 100 or 350&#8211;480</string>
    <string name="pub_year_error">Wrong format!\nEx: 1987 or 1970&#8211;1980</string>
    <string name="date_error">Wrong format!\nEx: 31/12/2015</string>
    <string name="national_id_error">Wrong National ID!</string>
    <string name="lang">Language</string>
    <string-array name="langs">
        <item>Arabic</item>
        <item>English</item>
    </string-array>
    <string name="site">Site</string>
    <string-array name="sites">
        <item>مكتبات جامعة الملك فيصل بالسعودية</item>
        <item>المجلس القومى للمرأة</item>
        <item>مكتبات جامعة العلوم التطبيقية بالبحرين</item>
        <item>مكتبات جامعة المملكة بالبحرين</item>
        <item>مكتبات جامعة سيناء</item>
        <item>كلية القرآن الكريم - جامعة الأزهر</item>
        <item>مكتبات المعهد التكنولوجي العالي بالعاشر من رمضان</item>
        <item>مكتبات مؤسسة المرأة و الذاكرة</item>
        <item>الأكاديمية العربية للعلوم المالية والمصرفية</item>
        <item>المعهد العالي للهندسة المعمارية</item>
        <item>دار الجوهرة للنشر والتوزيع</item>
        <item>الفهرس الموحد للمدارس المصرية</item>
        <item>قصر ثقافة اسيوط</item>
        <item>اتحاد مكتبات الجامعات المصرية</item>
    </string-array>
    <string name="footer_text" translatable="false">Powered by <b>Future Library Software</b>\nAll rights reserved \u00A9 <b>CITC</b> - 2013 - Mansoura University</string>
    <string name="holdings_search">Holdings Search</string>
    <string name="search_hint">Search Text</string>
    <string name="select_type">Item type</string>
    <string-array name="start_search_type">
        <item>All items</item>
        <item>Books</item>
        <item>Theses</item>
        <item>Periodicals</item>
    </string-array>
    <string name="search">Search</string>
    <string name="enter_text">Enter search text first</string>
    <string name="browse_by_subject">Browse by Subject</string>
    <string name="about_site">About Site</string>
    <string name="contact_us">Contact Us</string>
    <string name="load_more">Load more</string>
    <string name="subject0">Computer science, knowledge &amp; systems</string>
    <string name="subject1">Philosophy and Psychology</string>
    <string name="subject2">Religion</string>
    <string name="subject3">Social sciences</string>
    <string name="subject4">Language</string>
    <string name="subject5">Natural sciences &amp; mathematics</string>
    <string name="subject6">Technology (Applied sciences)/General technology</string>
    <string name="subject7">The arts; fine &amp; decorative arts</string>
    <string name="subject8">Literature &amp; rhetoric</string>
    <string name="subject9">History &amp; geography</string>
    <string name="subject01">Bibliography</string>
    <string name="subject02">Library &amp; information sciences</string>
    <string name="subject03">General encyclopedic works</string>
    <string name="subject04">Unassigned</string>
    <string name="subject05">General serial publications &amp; their indexes</string>
    <string name="subject06">General organizations &amp; museum science</string>
    <string name="subject07">News media, journalism &amp; publishing</string>
    <string name="subject08">General collections</string>
    <string name="subject09">Manuscripts &amp; rare books</string>
    <string name="subject11">Metaphysics</string>
    <string name="subject12">Epistemology, causation, humankind</string>
    <string name="subject13">Parapsychology &amp; occultism</string>
    <string name="subject14">Specific philosophical schools</string>
    <string name="subject15">Psychology</string>
    <string name="subject16">Logic</string>
    <string name="subject17">Ethics (moral philosophy)</string>
    <string name="subject18">Ancient, medieval &amp; eastern philosophy</string>
    <string name="subject19">Modern Western philosophy</string>
    <string name="subject21">Philosophy &amp; theory of religion</string>
    <string name="subject22">Bible</string>
    <string name="subject23">Christianity &amp; Christian theology</string>
    <string name="subject24">Christian moral &amp; devotional theology</string>
    <string name="subject25">Christian orders &amp; local church</string>
    <string name="subject26">Social &amp; ecclesiastical theology</string>
    <string name="subject27">History of Christianity &amp; Christian church</string>
    <string name="subject28">Christian denominations &amp; sects</string>
    <string name="subject29">Other &amp; comparative religions</string>
    <string name="subject31">Collections of general statistics</string>
    <string name="subject32">Political science</string>
    <string name="subject33">Economics</string>
    <string name="subject34">Law</string>
    <string name="subject35">Public administration &amp; military science</string>
    <string name="subject36">Social problems &amp; services; associations</string>
    <string name="subject37">Education</string>
    <string name="subject38">Commerce, communications &amp; transportation</string>
    <string name="subject39">Customs, etiquette, folklore</string>
    <string name="subject41">Linguistics</string>
    <string name="subject42">English &amp; Old English</string>
    <string name="subject43">Germanic languages German</string>
    <string name="subject44">Romance languages; French</string>
    <string name="subject45">Italian, Romanian languages</string>
    <string name="subject46">Spanish &amp; Portuguese languages</string>
    <string name="subject47">Italic languages, Latin</string>
    <string name="subject48">Hellenic languages, Classical Greek</string>
    <string name="subject49">Other languages</string>
    <string name="subject51">Mathematics</string>
    <string name="subject52">Astronomy &amp; allied sciences</string>
    <string name="subject53">Physics</string>
    <string name="subject54">Chemistry &amp; allied sciences</string>
    <string name="subject55">Earth sciences</string>
    <string name="subject56">Paleontology, paleozoology</string>
    <string name="subject57">Life sciences; biology</string>
    <string name="subject58">Plants (Botany)</string>
    <string name="subject59">Animals (Zoology)</string>
    <string name="subject61">Medicine &amp; health</string>
    <string name="subject62">Engineering &amp; allied operations</string>
    <string name="subject63">Agriculture &amp; related technologies</string>
    <string name="subject64">Home &amp; family management</string>
    <string name="subject65">Management &amp; auxiliary services</string>
    <string name="subject66">Chemical engineering</string>
    <string name="subject67">Manufacturing</string>
    <string name="subject68">Manufacture for specific uses</string>
    <string name="subject69">Buildings</string>
    <string name="subject71">Civic &amp; landscape art</string>
    <string name="subject72">Architecture</string>
    <string name="subject73">Plastic arts, sculpture</string>
    <string name="subject74">Drawing &amp; decorative arts</string>
    <string name="subject75">Painting &amp; paintings</string>
    <string name="subject76">Graphic arts, printmaking &amp; prints, postage</string>
    <string name="subject77">Photography, photographs &amp; computer art</string>
    <string name="subject78">Music</string>
    <string name="subject79">Recreational &amp; performing arts</string>
    <string name="subject81">American literature in English</string>
    <string name="subject82">English &amp; Old English literatures </string>
    <string name="subject83">Literatures of Germanic languages</string>
    <string name="subject84">Literatures of Romance languages</string>
    <string name="subject85">Italian, Romanian literatures</string>
    <string name="subject86">Spanish &amp; Portuguese literatures</string>
    <string name="subject87">Italic literatures; Latin literature</string>
    <string name="subject88">Hellenic literatures; classical Greek</string>
    <string name="subject89">Literatures of other languages</string>
    <string name="subject91">Geography and travel</string>
    <string name="subject92">Biography, genealogy, insignia</string>
    <string name="subject93">History of ancient world to ca. 499</string>
    <string name="subject94">History of Europe</string>
    <string name="subject95">History of Asia; Far East</string>
    <string name="subject96">History of Africa</string>
    <string name="subject97">History of North America</string>
    <string name="subject98">History of South America</string>
    <string name="search_results">Search Results</string>
    <string name="ddc">DDC No.</string>
    <string name="statOfRes">Statement of Responsibility</string>
    <string name="altTitle">Alternate Title</string>
    <string name="placeOfPub">Place of Publication</string>
    <string name="extent">Extent</string>
    <string name="dimensions">Dimensions</string>
    <string name="generalNote">General Note</string>
    <string name="topicalTerm">Topical Term</string>
    <string name="personalName">Personal Name</string>
    <string name="corpName">Corporate Name</string>
    <string name="desOfAttach">Description of Attached</string>
    <string name="supervisors">Supervisors</string>
    <string name="subjects">Subjects</string>
    <string name="specialty">Specialty</string>
    <string name="siteRegistration">Site Registration</string>
    <string name="generalNo">General No.</string>
    <string name="callNo">Call No.</string>
    <string name="location">Location</string>
    <string name="keywords">Keywords</string>
    <string name="attach_contains">FT attach contains</string>
    <string name="word_processing">Word processing</string>
    <string name="bib_id">BibID</string>
    <string name="bib_id_hint">Ex: 100 or 350&#8211;480</string>
    <string name="pub_year">Publish year</string>
    <string name="pub_year_hint">Ex: 1987 or 1970&#8211;1980</string>
    <string name="order_by">Order by</string>
    <string name="search_tips">Search Tips</string>
    <string name="search_tips_details">\t&#8226; If search word is incomplete put * (Infrastr*)\n\t&#8226; Search for two words put &amp; (Infrastructure &amp; Networking)\n\t&#8226; Search for two related words put ~ (Infrastructure ~ Networking)</string>
    <string name="degree">Degree</string>
    <string name="paper_title">Paper Title</string>
    <string name="authors">Authors</string>
    <string name="paper_abstract">Abstract</string>
    <string name="author_national_id">Author National ID</string>
    <string name="author_id">Author ID</string>
    <string name="has_attachments">Has Attachments</string>
</resources>