<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/categories"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_start"
            android:checked="true"
            android:icon="@drawable/ic_home_black_36dp"
            android:title="@string/nav_start" />
        <item
            android:id="@+id/nav_holdings"
            android:icon="@drawable/ic_library_books_black_36dp"
            android:title="@string/nav_holdings" />
        <!--<item
            android:id="@+id/nav_internet_search"
            android:title="@string/nav_internet_search" />
        <item
            android:id="@+id/nav_databases"
            android:title="@string/nav_databases" />-->
        <item
            android:id="@+id/nav_thesis"
            android:icon="@drawable/ic_school_black_36dp"
            android:title="@string/nav_theses" />
        <item
            android:id="@+id/nav_draft_thesis"
            android:icon="@drawable/ic_drafts_black_36dp"
            android:title="@string/nav_draft_theses" />
        <item
            android:id="@+id/nav_papers"
            android:icon="@drawable/ic_description_black_36dp"
            android:title="@string/nav_papers" />
        <item
            android:id="@+id/nav_local_journals"
            android:icon="@drawable/ic_chrome_reader_mode_black_36dp"
            android:title="@string/nav_local_journals" />
        <!--<item
            android:id="@+id/nav_e_publish"
            android:title="@string/nav_e_publish" />-->
        <item
            android:id="@+id/nav_digital_contents"
            android:icon="@drawable/ic_inbox_black_36dp"
            android:title="@string/nav_digital_contents" />
        <!--<item
            android:id="@+id/nav_my_account"
            android:title="@string/nav_my_account" />-->
    </group>
    <group
        android:id="@+id/settings"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_36dp"
            android:title="@string/action_settings" />
    </group>
</menu>