<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/searchLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView style="@style/Logo" />

            <TextView
                style="@style/MainTitle"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/nav_papers" />

            <EditText
                android:id="@+id/PaperTitle"
                style="@style/HoldingsEditText"
                android:hint="@string/paper_title" />

            <EditText
                android:id="@+id/Authors"
                style="@style/HoldingsEditText"
                android:hint="@string/authors" />

            <EditText
                android:id="@+id/Keywords"
                style="@style/HoldingsEditText"
                android:hint="@string/keywords" />

            <EditText
                android:id="@+id/Abstract"
                style="@style/HoldingsEditText"
                android:hint="@string/paper_abstract" />

            <EditText
                android:id="@+id/AuthorNationalID"
                style="@style/HoldingsEditText"
                android:hint="@string/author_national_id" />

            <EditText
                android:id="@+id/AuthorID"
                style="@style/HoldingsEditText"
                android:hint="@string/author_id" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/HasAttachments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/has_attachments" />

            <Button
                android:id="@+id/searchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/search" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tips_border"
                android:orientation="vertical"
                android:padding="@dimen/fab_margin">

                <TextView
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search_tips"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search_tips_details" />
            </LinearLayout>

            <TextView style="@style/Footer" />
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/resultsLayout"
        style="@style/ResultsLayout">

        <ImageView
            android:id="@+id/logo"
            style="@style/Logo" />

        <TextView
            style="@style/MainTitle"
            android:text="@string/search_results" />

        <TextView
            android:id="@+id/ResultsNumber"
            style="@style/ResultsNumber" />

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/ResultsPapersSwipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/ResultsPapers"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </android.support.v4.widget.SwipeRefreshLayout>
    </LinearLayout>
</RelativeLayout>