<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <ScrollView
        android:id="@+id/searchLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView style="@style/Logo" />

            <TextView
                style="@style/MainTitle"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/nav_digital_contents" />

            <LinearLayout style="@style/TypeLayout">

                <TextView
                    style="@style/SelectType"
                    android:text="@string/select_type" />

                <Spinner
                    android:id="@+id/theses_search_type"
                    style="@style/TypeSpinner" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout style="@style/HoldingsEditTextLayout">

                <EditText
                    android:id="@+id/SearchText1"
                    style="@style/HoldingsEditText"
                    android:hint="@string/search_hint" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout style="@style/KeywordLayout">

                <Spinner
                    android:id="@+id/keyword1"
                    style="@style/KeywordSpinner"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/conc1"
                    style="@style/KeywordSpinner"
                    android:layout_weight="3" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout style="@style/HoldingsEditTextLayout">

                <EditText
                    android:id="@+id/SearchText2"
                    style="@style/HoldingsEditText"
                    android:hint="@string/search_hint" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout style="@style/KeywordLayout">

                <Spinner
                    android:id="@+id/keyword2"
                    style="@style/KeywordSpinner"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/conc2"
                    style="@style/KeywordSpinner"
                    android:layout_weight="3" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout style="@style/HoldingsEditTextLayout">

                <EditText
                    android:id="@+id/SearchText3"
                    style="@style/HoldingsEditText"
                    android:hint="@string/search_hint" />
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/keyword3"
                style="@style/KeywordSpinner" />

            <android.support.design.widget.TextInputLayout style="@style/HoldingsEditTextLayout">

                <EditText
                    android:id="@+id/attach_contains"
                    style="@style/HoldingsEditText"
                    android:hint="@string/attach_contains" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                style="@style/TypeLayout"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    style="@style/SelectType"
                    android:text="@string/word_processing" />

                <Spinner
                    android:id="@+id/WordProcessingSpinner"
                    style="@style/TypeSpinner" />
            </LinearLayout>

            <LinearLayout
                style="@style/TypeLayout"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    style="@style/SelectType"
                    android:text="@string/bib_id" />

                <android.support.design.widget.TextInputLayout style="@style/TypeSpinner">

                    <EditText
                        android:id="@+id/BibID"
                        style="@style/TypeSpinnerET"
                        android:hint="@string/bib_id_hint"
                        android:inputType="date" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/TypeLayout"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    style="@style/SelectType"
                    android:text="@string/pub_year" />

                <android.support.design.widget.TextInputLayout style="@style/TypeSpinner">

                    <EditText
                        android:id="@+id/Publishyear"
                        style="@style/TypeSpinnerET"
                        android:hint="@string/pub_year_hint"
                        android:inputType="date" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/TypeLayout"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    style="@style/SelectType"
                    android:text="@string/order_by" />

                <Spinner
                    android:id="@+id/OrderBySpinner"
                    style="@style/TypeSpinner" />
            </LinearLayout>

            <Button
                android:id="@+id/searchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/search" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tips_border"
                android:orientation="vertical"
                android:padding="@dimen/fab_margin">

                <TextView
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search_tips"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search_tips_details" />
            </LinearLayout>

            <TextView style="@style/Footer" />
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/resultsLayout"
        style="@style/ResultsLayout">

        <TextView
            style="@style/MainTitle"
            android:text="@string/search_results" />

        <TextView
            android:id="@+id/ResultsNumber"
            style="@style/ResultsNumber" />

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/ResultsDigitalContentSwipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/ResultsDigitalContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </android.support.v4.widget.SwipeRefreshLayout>
    </LinearLayout>
</RelativeLayout>