<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/itemHoldings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow>

            <TextView
                style="@style/TableHeader"
                android:layout_weight="1"
                android:text="@string/generalNo" />

            <TextView
                style="@style/TableHeader"
                android:layout_weight="1"
                android:text="@string/callNo" />

            <TextView
                style="@style/TableHeader"
                android:layout_weight="3"
                android:text="@string/location" />
        </TableRow>
    </TableLayout>
</ScrollView>