<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                style="@style/StartResultText"
                android:layout_weight="2"
                android:text="@string/supervisors"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/supervisors"
                style="@style/StartResultText"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                style="@style/StartResultText"
                android:layout_weight="2"
                android:text="@string/subjects"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/subjects"
                style="@style/StartResultText"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                style="@style/StartResultText"
                android:layout_weight="2"
                android:text="@string/degree"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/degree"
                style="@style/StartResultText"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                style="@style/StartResultText"
                android:layout_weight="2"
                android:text="@string/specialty"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/specialty"
                style="@style/StartResultText"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                style="@style/StartResultText"
                android:layout_weight="2"
                android:text="@string/siteRegistration"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/siteRegistration"
                style="@style/StartResultText"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>